--- a/src/style.css
+++ b/src/style.css
@@ -108,7 +108,6 @@ h3 {
 }
 
 button {
-  padding: 10px 20px;
   font-size: 20px;
   font-weight: bold;
   border: none;
@@ -118,7 +117,9 @@ button {
 }
 
 #play {
-  background: #4caf50;
+  width: 40px;
+  height: 40px;
+  background: transparent;
   color: white;
 }
 
@@ -127,7 +128,9 @@ button {
 }
 
 #stop {
-  background: #f44336;
+  width: 40px;
+  height: 40px;
+  background: transparent;
   color: white;
 }
 
