very important things

--- a/webapp/src/style.css
+++ b/webapp/src/style.css
@@ -271,6 +271,10 @@ button {
   font-family: monospace;
 }
 
+. {
+
+}
+
 .room-status-compact #copy-room {
   padding: 6px 12px;
   font-size: 14px;
@@ -284,6 +288,17 @@ button {
 
 .room-status-compact #copy-room:hover {
   background: #555;
+}
+
+.room-status-compact #goto-lobby {
+  font-size: 14px;
+  padding: 7px;
+  background: #444;
+  color: #fff;
+}
+
+.room-status-compact #goto-lobby:hover {
+  background: red;
 }
 
 /* Lobby Styles */
